[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabr-replication-demo"
version = "0.1.0"
description = "Monte Carlo replication scaffold for efficient SABR simulation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SABR replication project team" }
]
keywords = ["finance", "sabr", "monte-carlo", "option-pricing", "numerical-methods"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pyfeng>=0.3.3",
]

[project.optional-dependencies]
test = ["pytest"]
notebook = ["jupyter", "matplotlib"]

[tool.setuptools]
py-modules = ["sabr_replicate"]
